			  - Added preliminary support for right-to-left languages  (Noor Dawod, Niels) 20020127
			  - Added the language flag to config.inc.php (Stefan) 20020127
			  - Moved weekly stats to the history pages and it is now 
			    every object which has a history page, instead of campaigns only  (Niels) 20020203
			  - Added graphs to every history page  (Niels) 20020203


			+ Misc bugfixes
			  - Removed extra comma from config.inc  (Matteo) 20011017
			  - Removed background color for flash banner; lets see if it's better... (Stefan) 20011019
			  - Fixed bug which prevented IP/hostname detection for ACLs, ignored hosts and logging
			    when 'x-http-forwarded-for' header was set to 'unknown' by the proxy  (Matteo) 20011022
			  - Fixed warning 'No DB connection'  (Niels) 20011024
			  - Destination cookie sometimes had wrong value  (Niels) 20011024
			  - Bugfix: AdClick history for mailed reports was limited to 7 days  (Niels) 20011026
			  - Bugfix: Fixed duplicate dblib include and phpAds_path problem  (Niels) 2001027
			  - Bugfix: Database connection will always be kept open, because
			    it might be shared with another script  (Niels) 20011102
			  - Bugfix: phpAds_path problem fixed when using the maintenance script  (Niels) 20011102
			  - Bugfix: Made phpAds_path available to admin files  (Niels) 20011102
			  - Bugfix: Fixed misc. E_ALL warnings  (Niels) 20011102
			  - Bugfix: target was replaced in HTML banners, even if the new target was empty  (Niels) 20011109
			  - Bugfix: Link to ACL page was shown even if they were disabled  (Niels) 20011110
			  - Bugfix: Removed extra return at the end of the banner-edit.php file  (Niels) 20011110
			  - Bugfix: Zonecache still included banners  (Niels) 20011116
			  - Bugfix: Zones admin files needed view.inc.php include: added it to lib-zones  (Matteo) 20011116
			  - Bugfix: Changed \n to \r\n in e-mail headers  (Niels) 20011117